Disable static archive lib for mingw.

--- a/libarchive/CMakeLists.txt
+++ b/libarchive/CMakeLists.txt
@@ -248,9 +248,9 @@ TARGET_LINK_LIBRARIES(archive_static ${ADDITIONAL_LIBS})
 SET_TARGET_PROPERTIES(archive_static PROPERTIES COMPILE_DEFINITIONS
   LIBARCHIVE_STATIC)
 # On Posix systems, libarchive.so and libarchive.a can co-exist.
-IF(NOT WIN32 OR CYGWIN)
+IF(NOT MSVC OR CYGWIN)
   SET_TARGET_PROPERTIES(archive_static PROPERTIES OUTPUT_NAME archive)
-ENDIF(NOT WIN32 OR CYGWIN)
+ENDIF(NOT MSVC OR CYGWIN)
 
 IF(ENABLE_INSTALL)
   # How to install the libraries
